--- a/BangaloreFlats.ipynb
+++ b/BangaloreFlats.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Date: 24th August 2018\n",
+    "#Author: Abhijit Jaiswal\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
